# pqtdiff3

./: .derived  .project  .pydevproject  README.md  old.txt  pyproject.toml
src/: demo_parser.py
src/pqtdiff3/: diff3.py  main.py  pqtdiff3.ui  ui.py
tests/: test_diff3.py  test_imposta_di_bollo.py
