[build-system]
build-backend = "pdm.backend"
requires = [ "pdm-backend" ]

[project]
name = "zeed-pqtdiff3"
version = "0.1.1"
description = "python+qt based kdiff3 clone"
license = { file = "LICENSE" }
authors = [
    { name = "ZeeD", email = "vito.detullio@gmail.com" },
]
requires-python = ">=3.12,<3.14"
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [ "pyside6>=6.8.2" ]
urls.Homepage = "https://github.com/ZeeD/pqtdiff3"
urls.Repository = "https://github.com/ZeeD/pqtdiff3.git"
gui-scripts.pqtdiff3 = "pqtdiff3.main:main"

[dependency-groups]
dev = [
    "coverage>=7.10.3",
    "mypy>=1.13",
    "pyproject-fmt>=2.5",
    "ruff>=0.7.1",
]

[tool.pdm]
distribution = true
plugins = [ "pdm-bump" ]

[tool.pdm.build]
excludes = [ "tests" ]

[tool.pdm.scripts]
_.env = { PYTHONPATH = "src:tests" }
lint = { composite = [
    "pyproject-fmt pyproject.toml",
    "ruff format {args:.}",
    "ruff check --exit-zero {args:.}",
    "mypy {args:.}",
] }
start = 'pqtdiff3'
test = { composite = [
    "coverage run -m unittest discover --verbose --locals --failfast --catch --start-directory tests",
    "coverage report",
    "coverage erase",
] }
bump_and_publish = { composite = [
    "pdm bump patch --commit --tag",
    # "pdm publish",
    "git push",
    "git push --tags",
] }

[tool.ruff]
line-length = 80
src = [ "src", "tests" ]
fix = true
format.quote-style = "single"
format.skip-magic-trailing-comma = true
format.docstring-code-format = true
lint.select = [ "ALL" ]
lint.ignore = [
    "COM812", # conflicts with formatter
    "D1",     # disabled by me
    "D203",   # incompatibility with D211
    "D213",   # incompatibility with D212
    "ISC001", # conflicts with formatter
    "PT009",
    "Q001",   # conflicts with formatter
    "Q002",   # conflicts with formatter
]
lint.flake8-annotations.allow-star-arg-any = true
lint.flake8-quotes.docstring-quotes = "single"
lint.flake8-quotes.inline-quotes = "single"
lint.flake8-quotes.multiline-quotes = "single"
lint.flake8-type-checking.quote-annotations = true
lint.isort.force-single-line = true

[tool.pyproject-fmt]
column_width = 80
indent = 4

[tool.coverage.run]
branch = true
source = [ "src", "tests" ]

[tool.coverage.report]
show_missing = true
sort = "Cover"
skip_empty = true

[tool.mypy]
mypy_path = [ "src", "tests" ]
strict = true
warn_unused_configs = true
