[build-system]
build-backend = "pdm.backend"
requires = [ "pdm-backend" ]

[project]
name = "zeed-pqtdiff3"
version = "0.1.1"
license = { file = "LICENSE" }
requires-python = ">=3.12,<3.15"
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [ "pyside6-essentials>=6.11" ]
urls.Homepage = "https://github.com/ZeeD/pqtdiff3"
urls.Repository = "https://github.com/ZeeD/pqtdiff3.git"
gui-scripts.pqtdiff3 = "pqtdiff3.main:main"

[dependency-groups]
dev = [
    "coverage>=7.10.3",
    "mypy>=1.13",
    "pyproject-fmt>=2.5",
    "ruff>=0.7.1",
]

[tool.pdm]
distribution = true
plugins = [ "pdm-bump" ]
build.excludes = [ "tests" ]
scripts._.env = { PYTHONPATH = "src:tests" }
scripts.bump_and_publish = { composite = [
    "pdm bump patch --commit --tag",
    # "pdm publish",
    "git push",
    "git push --tags",
] }
scripts.lint = { composite = [
    "pyproject-fmt pyproject.toml",
    "ruff format {args:.}",
    "ruff check {args:.}",
    "mypy {args:.}",
], keep_going = true }
scripts.start = "pqtdiff3"
scripts.test = { composite = [
    "coverage run -m unittest discover --verbose --locals --failfast --catch --start-directory tests {args}",
    "coverage report",
    "coverage erase",
] }

[tool.ruff]
line-length = 80
src = [ "src", "tests" ]
fix = true
format.quote-style = "single"
format.skip-magic-trailing-comma = true
format.docstring-code-format = true
lint.select = [ "ALL" ]
lint.ignore = [
    "ANN1",
    "COM812",
    "D1",
    "D203",
    "D213",
    "ISC001",
    "PT009",
    "PT027",
    "Q001",
    "Q002",
    "TD002",
    "TD003",
]
lint.extend-per-file-ignores."stubs/**/*.pyi" = [
    "FBT001",
    "FBT002",
    "N802",
    "N803",
    "N815",
    "PLR0913",
]
lint.flake8-annotations.allow-star-arg-any = true
lint.flake8-quotes.docstring-quotes = "single"
lint.flake8-quotes.inline-quotes = "single"
lint.flake8-quotes.multiline-quotes = "single"
lint.flake8-type-checking.quote-annotations = true
lint.isort.force-single-line = true

[tool.pyproject-fmt]
column_width = 80
indent = 4

[tool.mypy]
mypy_path = [ "src", "tests" ]
strict = true
warn_unused_configs = true

[tool.coverage]
run.branch = true
run.source = [ "src", "tests" ]
report.show_missing = true
report.skip_empty = true
report.sort = "Cover"
